-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.4, 6.6.2, 6.7.0 Beta1, 6.7, 6.8.0 FF
-
6.5.3
-
7c59afe36 (dev), cf2221de7 (6.7), 66942d9ee (6.6), f7314a11f (tqtc/lts-6.5)
The JS type url is not correctly converted to QUrl in C++. The respective QJSValue returns "isUndefined() = true". Also the "isUrl()" returns false.
If a "toString()" is called on the url object in QML before handing it over to our C++ function then the value is passed correctly.
To reproduce the issue please run the attached example project and click the button "passing URL"
For Gerrit Dashboard: QTBUG-119794 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
525738,4 | QJSValue::isUrl: return true if the value carries a QUrl QVariant | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
525829,2 | QJSValue: document that isUrl only returns true for JS URL objects | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
526384,2 | QJSValue: document that isUrl only returns true for JS URL objects | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
526401,2 | QJSValue: document that isUrl only returns true for JS URL objects | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
526481,2 | QJSValue: document that isUrl only returns true for JS URL objects | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |